--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
         "vite": "^7.0.6"
     },
     "dependencies": {
-        "autoprefixer": "^10.3.1"
+        "autoprefixer": "^10.3.1",
+        "cors": "^2.8.5"
     },
     "type": "module"
 }
